# semantic-utils

./: Cargo.toml  README.md
src/: main.rs
src/modules/: chunk_text.rs  mod.rs
src/structs/: common.rs
src/utils/: db_connect.rs  embedding_utils.rs  get_datocms_stories.rs  mod.rs
