[package]
name = "semantic-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
thiserror = "1.0"
http = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"  # or the latest version
